--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,9 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=target/classes;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1521480113465
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1524085148868
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=C:\\Users\\Ricardo\\Documents\\Disciplinas Programacao\\ES
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
